name:                tcc
version:             0.0
description:         Bindings to the Tiny C Compiler library.
synopsis:            Bindings to the Tiny C Compiler library.
license:             BSD3
license-file:        LICENSE
homepage:            http://
author:              Vo Minh Thu
category:            Language
maintainer:          <noteed@gmail.com>
build-type:          Simple
Cabal-Version: >= 1.2

library
  build-depends:       base
  exposed-modules:     Language.TCC
  extensions:          ForeignFunctionInterface
  ghc-options:         -Wall
                       -O2
                       -fvia-C
  include-dirs:        include
  includes:            libtcc.h, convenience.h
  c-sources:           cbits/convenience.c
  extra-libraries:     dl, tcc

